--- a/browser/resources/settings/brave_settings_overrides.html
+++ b/browser/resources/settings/brave_settings_overrides.html
@@ -122,6 +122,7 @@
         padding: 0 !important;
         margin-top: 30px !important;
         line-height: 1.25 !important;
+        border: none !important;
       }
 
       #advancedButton > iron-icon {
